@@ -1,5 +1,5 @@
 noinst_LTLIBRARIES=libreplace.la
-libreplace_la_SOURCES=memdup.c catstr.c fexist.c
+libreplace_la_SOURCES=memdup.c catstr.c fexist.c ltrim.c rtrim.c
 libreplace_la_LIBADD=$(LTLIBOBJS)
 noinst_HEADERS=memdup.h catstr.h macros.h fexist.h
 EXTRA_DIST=memcmp.c strlwr.c strlwr.h
