@@ -36,5 +36,9 @@
 
 #define strip_slash(str) if (str[strlen(str) - 1] == '/') str[strlen(str) - 1] = 0
 #define cat_slash(str) if (str[strlen(str) - 1] != '/') strcat(str, "/")
+#define trim(s) ltrim(rtrim(s))
+
+char * ltrim(char * str);
+char * rtrim(char * str);
 
 #endif // _MACROS_H
